--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="abc_shareactionprovider_share_with">Share with</string>
     <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
     <string name="abc_toolbar_collapse_description">Collapse</string>
+    <string name="androidjs_vendor">vendor_degaso</string>
     <string name="app_name">Sample Android js</string>
     <string name="intent_url_failed">No app found to open this link</string>
     <string name="search_menu_title">Search</string>
